@@ -15,6 +15,7 @@ Revision history for Rex
  - Clarify Rex::Transaction documentation
  - Fix typos
  - Document limitations of nesting shared variables
+ - Add initial documentation for Rex::Hook
 
  [ENHANCEMENTS]
  - Check availability of sysctl command
